--- a/kz/index.html
+++ b/kz/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="kz">
     <head>
-        <title>People Find - Главная</title>
+        <title>People Find - Үй</title>
         <meta charset="UTF-8" />
         <meta name="description" content="Meta Description" />
         <meta name="format-detection" content="telephone=no" />
@@ -49,7 +49,7 @@
                                         </a>
                                         <ul class="dropdown__menu">
                                             <li>
-                                                <a href="/kz/reckzitment.html"
+                                                <a href="/kz/recruitment.html"
                                                     >Атқарушы жұмысқа қабылдау</a
                                                 >
                                             </li>
@@ -73,14 +73,14 @@
                                     </li>
                                     <li class="menu__item">
                                         <a href="#" class="menu__link dropdown">
-                                            <span class="menu__text">kz</span>
+                                            <span class="menu__text">KZ</span>
                                             <img
                                                 src="/img/arrow-menu.svg"
                                                 class="arrow"
                                                 alt="arrow" />
                                         </a>
                                         <ul class="dropdown__menu">
-                                            <li><a href="/kz">KZ</a></li>
+                                            <li><a href="/ru">RU</a></li>
                                             <li><a href="/">EN</a></li>
                                         </ul>
                                     </li>
@@ -130,7 +130,7 @@
                                 </div>
                                 <div>
                                     <h3 class="services__item-title">Атқарушы жұмысқа қабылдау</h3>
-                                    <a href="/kz/reckzitment.html" class="services__item-link"
+                                    <a href="/kz/recruitment.html" class="services__item-link"
                                         >Көбірек білу үшін
                                         <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
