--- a/kz/clients.html
+++ b/kz/clients.html
@@ -41,7 +41,7 @@
                                         </a>
                                         <ul class="dropdown__menu">
                                             <li>
-                                                <a href="/kz/reckzitment.html"
+                                                <a href="/kz/recruitment.html"
                                                     >Атқарушы жұмысқа қабылдау</a
                                                 >
                                             </li>
@@ -67,14 +67,14 @@
                                     </li>
                                     <li class="menu__item">
                                         <a href="#" class="menu__link dropdown">
-                                            <span class="menu__text">kz</span>
+                                            <span class="menu__text">KZ</span>
                                             <img
                                                 src="/img/arrow-menu.svg"
                                                 class="arrow"
                                                 alt="arrow" />
                                         </a>
                                         <ul class="dropdown__menu">
-                                            <li><a href="/kz">KZ</a></li>
+                                            <li><a href="/ru">RU</a></li>
                                             <li><a href="/">EN</a></li>
                                         </ul>
                                     </li>
