--- a/kz/about.html
+++ b/kz/about.html
@@ -74,7 +74,7 @@
                                                 alt="arrow" />
                                         </a>
                                         <ul class="dropdown__menu">
-                                            <li><a href="/r">RU</a></li>
+                                            <li><a href="/ru">RU</a></li>
                                             <li><a href="/">EN</a></li>
                                         </ul>
                                     </li>
