--- a/kz/recruitment.html
+++ b/kz/recruitment.html
@@ -106,7 +106,7 @@
                             <div
                                 class="resources__img resources__img_v3"
                                 data-da=".resources__container, 991, 5">
-                                <img src="/img/reckzitment.webp" alt="Human Resources" />
+                                <img src="/img/recruitment.webp" alt="Human Resources" />
                             </div>
                             <div
                                 class="resources__content resources__content_v3 resources__content_v4">
@@ -119,7 +119,7 @@
                                     бизнесіңізді қалыптастыратын негізгі сандарды нақты түсінуіңізге
                                     көз жеткізу үшін уақыт пен күшімізді арнаймыз.
                                 </p>
-                                <a href="contact.html" class="btn reckzitment__btn">Хабарласыңыз</a>
+                                <a href="contact.html" class="btn recruitment__btn">Хабарласыңыз</a>
                             </div>
                         </div>
                     </div>
@@ -135,8 +135,8 @@
                                 </div>
                             </div>
                             <div
-                                class="resources__list_v2-wrapper resources__list_reckzitment-wrapper">
-                                <ul class="resources__list_v3 resources__list_reckzitment">
+                                class="resources__list_v2-wrapper resources__list_recruitment-wrapper">
+                                <ul class="resources__list_v3 resources__list_recruitment">
                                     <li class="resources__list-item resources__list_v3-item">
                                         Сіздің құрметті жұмыс күшіңіз үшін уақтылы төлемдер мен есеп
                                         айырысу құжаттарын дайындауға кепілдік.
@@ -165,7 +165,7 @@
                                         Төлем деңгейін бірлесіп анықтау.
                                     </li>
                                 </ul>
-                                <ul class="resources__list_v3 resources__list_reckzitment-tab">
+                                <ul class="resources__list_v3 resources__list_recruitment-tab">
                                     <li class="resources__list-item resources__list_v3-item">
                                         Шығындарды басқару, соның ішінде жалақы, шот-фактуралар және
                                         т.б.
@@ -193,7 +193,7 @@
                                         Төлем деңгейін бірлесіп анықтау.
                                     </li>
                                 </ul>
-                                <ul class="resources__list_v3 resources__list_reckzitment-mob">
+                                <ul class="resources__list_v3 resources__list_recruitment-mob">
                                     <li class="resources__list-item resources__list_v3-item">
                                         Шығындарды басқару, соның ішінде жалақы, шот-фактуралар және
                                         т.б.
